examples/simple/posix/UB-PTHREAD1-bad.output
Error: UB-PTHREAD1
Description: Initializing an already initialiized mutex.
Type: Undefined behavior.
See also: POSIX 2008 sec. pthread_mutex_init
  at pthread_mutex_init(UB-PTHREAD1-bad.c:17)
  at main(UB-PTHREAD1-bad.c:17)
  at <file-scope>(<unknown>)
